// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component renders as expected 1`] = `
<div
  className="bx--inline-notification bx--inline-notification--undefined"
  role="alert"
>
  <div
    className="bx--inline-notification__details"
  >
    <svg
      aria-label="close"
      className="bx--inline-notification__icon"
    >
      <use
        xlinkHref="undefined/graphics/carbon-icons.svg#icon--undefined--glyph"
      />
    </svg>
    <div
      className="bx--inline-notification__text-wrapper"
    >
      <p
        className="bx--inline-notification__title"
      />
      <p
        className="bx--inline-notification__subtitle"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Notification component renders as expected 2`] = `
<div
  className="bx--inline-notification bx--inline-notification--undefined"
  role="alert"
>
  <div
    className="bx--inline-notification__details"
  >
    <svg
      aria-label="close"
      className="bx--inline-notification__icon"
    >
      <use
        xlinkHref="undefined/graphics/carbon-icons.svg#icon--undefined--glyph"
      />
    </svg>
    <div
      className="bx--inline-notification__text-wrapper"
    >
      <p
        className="bx--inline-notification__title"
      />
    </div>
  </div>
  <div>
    <button
      className="bx--inline-notification__close-button"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-label="close"
        className="bx--inline-notification__close-icon"
      >
        <use
          xlinkHref="undefined/graphics/carbon-icons.svg#icon--close"
        />
      </svg>
    </button>
  </div>
</div>
`;
